Bug 1405643 - ensure items don't spill out of the panel on small window sizes in customize mode, r=mikedeboer
MozReview-Commit-ID: 6GCSSLzt7h1

UltraBlame original commit: 1a485a712da19a9b7d564a22bcf9bdcea332030e

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1250,7 +1250,7 @@ toolbarpaletteitem[place="palette"] > #downloads-button[indicator] > #downloads-
 }
 
 #customization-panelHolder > #widget-overflow-fixed-list {
-  flex: 0 1 auto; 
+  flex: 1 1 auto; 
   display: flex;
   flex-direction: column;
   overflow-y: auto;
@@ -1262,7 +1262,7 @@ toolbarpaletteitem[place="palette"] > #downloads-button[indicator] > #downloads-
 #customization-panelHolder {
   flex-direction: column;
   display: flex;
-  min-height: 0;
+  min-height: calc(174px + 8em);
 }
 
 #customization-panelWrapper {
